# mei-tfm-hikeye-qt

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  compile.sh  hikeye.pro  run.sh  shell.nix
src/: CDataManager.cpp  CDataManager.hpp  CMainGraphicsWidget.cpp  CMainGraphicsWidget.hpp  CMainWindow.cpp  CMainWindow.hpp  CMainWindow.ui  CMakeLists.txt  Types.hpp  main.cpp
src/common/: CMakeLists.txt  Math.cpp  Math.hpp  Math.tpp  Types.cpp  Types.hpp  Utils.hpp
src/dataStructures/: CConfigs.hpp  CDataManager.cpp  CDataManager.hpp  CHeightMap.cpp  CHeightMap.hpp  CMakeLists.txt  CTerrain.cpp  CTerrain.hpp  SGroundTruth.cpp  SGroundTruth.hpp  SHeightMap.cpp  SHeightMap.hpp  SMatches.cpp  SMatches.hpp  SQueries.cpp  SQueries.hpp  STerrain.cpp  STerrain.hpp  STexture.cpp  STexture.hpp
src/graphics/: CCamera.cpp  CCamera.hpp  CCustomColourSpectrum.cpp  CCustomColourSpectrum.hpp  CMainGraphicsWidget.cpp  CMainGraphicsWidget.hpp  CMakeLists.txt
src/loadingModule/: CLoadingModule.cpp  CLoadingModule.hpp  CMakeLists.txt  CResourceLoader.cpp  CResourceLoader.hpp  CResourceLoaderFactory.hpp
src/shaders/: basicShader.frag  basicShader.vert  terrain.frag
src/utilities/: CCsvParser.cpp  CCsvParser.hpp  CMakeLists.txt  CWktParser.cpp  CWktParser.hpp
tools/: dem.py  groundTruth.py
tools/DataGetters/: CampToCampTrackGetter.py  GaiaGPSTrackGetter.py  GroundTruthGetter.py  OpenStreetMapDataGetter.py  WikilocTrackGetter.py  demImporter.py
tools/MatchMaker/: .gitignore  performMatch.py  shell.nix
tools/MatchMaker/importer/: gpx2csv.py  (+2 more)
(+53 files in other folders)
